# windows-cursor-streamer

./: CMakeLists.txt  CursorMonitor.exe - 快捷方式.lnk  README.md  client_manager.hpp  cursor_capture.hpp  cursor_monitor.cpp  cursor_monitor.manifest  cursor_monitor_optimized.cpp  logger.hpp  lru_cache.hpp  main.cpp  vcpkg.json  光标监控网络传输.py
.github/workflows/:  build.yml  build.yml
